--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@ngrx/router-store": "^15.3.0",
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.3.0",
+    "@types/socket.io-client": "^3.0.0",
     "bootstrap": "3.3.6",
     "i": "^0.3.7",
-    "npm": "^9.7.2",
     "ngx-infinite-scroll": "^10.0.1",
+    "npm": "^9.7.2",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
+    "socket.io-client": "^4.7.1",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
